48. Spring Pet Clinic - Multi-Module Maven Builds